[gd_scene load_steps=4 format=3 uid="uid://2t7kuvebemtb"]

[ext_resource type="Script" uid="uid://d3u6i3tc2hpv4" path="res://Scenes/Esc/EscMenu.gd" id="1_ikty5"]
[ext_resource type="Texture2D" uid="uid://b1ue0g77dyokw" path="res://Assets/Sprites/buttons/test_background.png" id="2_6elv5"]
[ext_resource type="Texture2D" uid="uid://xbaukskk2h8s" path="res://Assets/Sprites/buttons/mainmenu_60x18.png" id="3_1fstb"]

[node name="EscMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ikty5")

[node name="MenuBox" type="NinePatchRect" parent="."]
offset_right = 81.0
offset_bottom = 53.0
texture = ExtResource("2_6elv5")

[node name="MainMenu" type="TextureButton" parent="MenuBox"]
layout_mode = 2
offset_right = 60.0
offset_bottom = 32.0
size_flags_vertical = 3
texture_normal = ExtResource("3_1fstb")
stretch_mode = 5

[node name="Pins" type="TextureButton" parent="MenuBox"]
layout_mode = 2
offset_right = 40.0

[node name="QuitButton" type="TextureButton" parent="MenuBox"]
layout_mode = 2
offset_top = 4.0
offset_right = 40.0
offset_bottom = 4.0

[connection signal="pressed" from="MenuBox/MainMenu" to="." method="_on_main_menu_pressed"]
